# awesome-blog

./: .gitignore  Cargo.toml  README.md
posts/my-first-article/: article.md  article_frontmatter.toml  post_frontmatter.toml
posts/the-second-post/: post.md  post_frontmatter.toml
src/: constants.rs  lib.rs  main.rs
src/handlers/: home_handler.rs  mod.rs  post_handler.rs
src/models/: frontmatter.rs  mod.rs
static/css/: index.css
tailwind/: package-lock.json  package.json
templates/: base.html  home.html  post.html
